force-app/main/default/objects/Error_Settings__c/fields/Async_Error_Check_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Async_Error_Check_Last_Run__c</fullName>
    <description>If checked, NPSP's error handling framework is disabled.</description>
    <inlineHelpText>Used to keep track of the most recent execution of the Async job error logger</inlineHelpText>
    <label>Async Error Check Last Run</label>
    <type>DateTime</type>
</CustomField>