force-app/main/default/objects/Error_Settings__c/fields/Don_t_Auto_Schedule_Default_NPSP_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Auto_Schedule_Default_NPSP_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, NPSP won't automatically schedule default recurring jobs.

These recurring jobs calculate rollups, update recurring donations and seasonal address, and perform error handling.

When checked, every time you visit the NPSP Settings page, NPSP verifies that the default recurring jobs are scheduled. Rescheduling only applies to missing jobs, not updated jobs.

To view these jobs, search for Scheduled Jobs in Salesforce Setup.</description>
    <inlineHelpText>When checked, NPSP won't automatically schedule default recurring jobs. These recurring jobs calculate rollups, update recurring donations and seasonal address, and perform error handling.</inlineHelpText>
    <label>Don't Auto Schedule Default NPSP Jobs</label>
    <type>Checkbox</type>
</CustomField>