force-app/main/default/objects/Error_Settings__c/fields/Enable_Debug__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn this on to enable debug statements in managed package code.</description>
    <inlineHelpText>Turn this on to enable debug statements in managed package code.</inlineHelpText>
    <label>Enable Debug</label>
    <type>Checkbox</type>
</CustomField>