force-app/main/default/objects/Error_Settings__c/fields/Error_Notifications_On__c.field-meta.xml
<CustomField>
    <fullName>Error_Notifications_On__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that determines whether to send error notifications.</description>
    <inlineHelpText>Check this if you'd like the system to post notifications for certain type of errors.</inlineHelpText>
    <label>Error Notifications</label>
    <type>Checkbox</type>
</CustomField>