force-app/main/default/objects/Error_Settings__c/fields/Error_Notifications_To__c.field-meta.xml
<CustomField>
    <fullName>Error_Notifications_To__c</fullName>
    <description>Who should receive error notifications.</description>
    <inlineHelpText>Select the type of user to send notifications to.</inlineHelpText>
    <label>Error Notification Recipients</label>
    <type>TextArea</type>
</CustomField>